main/default/objects/Slack_Settings__c/Slack_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Slack Settings</label>
</CustomObject>