main/default/objects/Slack_Settings__c/fields/Slack_API_Token__c.field-meta.xml
<CustomField>
    <fullName>Slack_API_Token__c</fullName>
    <label>Slack API Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>