main/default/objects/Slack_Settings__c/fields/Slack_Channel_ID__c.field-meta.xml
<CustomField>
    <fullName>Slack_Channel_ID__c</fullName>
    <label>Slack Channel ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>