main/default/objects/Slack_Settings__c/fields/Slack_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Slack_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Slack Enabled</label>
    <type>Checkbox</type>
</CustomField>