main/default/objects/Slack_Settings__c/fields/Slack_Message_Template__c.field-meta.xml
<CustomField>
    <fullName>Slack_Message_Template__c</fullName>
    <defaultValue>&apos;New Log: pharos__Log__c.Name\n pharos__Log__c.Link&apos;</defaultValue>
    <label>Slack Message Template</label>
    <type>TextArea</type>
</CustomField>