main/default/objects/Slack_Settings__c/fields/Slack_New_Logs_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Slack_New_Logs_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Slack New Logs Enabled</label>
    <type>Checkbox</type>
</CustomField>